NXP-32825: Cleanup, fix some SonarQube issues, comment test